# psvita_sokol_example

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.c  sokol_debugtext.h  sokol_gl.h  sokol_time.h
